# fastapi-poetry-pydantic-pyright-pytest-example

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
